--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -15,6 +15,9 @@
     "axios": "^1.11.0",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "install": "^0.13.0",
+    "lucide-react": "^0.563.0",
+    "npm": "^11.8.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
@@ -36,5 +39,3 @@
     "vite": "^7.1.2"
   }
 }
-
-
