--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.0",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
