--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
