--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "crypto": "^1.0.1",
+    "framer-motion": "^12.33.0",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "install": "^0.13.0",
