--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -11,6 +11,8 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
@@ -22,6 +24,7 @@
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
+    "openai": "^6.18.0",
     "razorpay": "^2.9.6",
     "sib-api-v3-sdk": "^8.5.0"
   },
