--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.8.2"
   },
