--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -22,6 +22,7 @@
     "npm": "^11.8.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-markdown": "^10.1.0",
     "react-router": "^7.9.1",
